--- a/hobbies1.html
+++ b/hobbies1.html
@@ -12,7 +12,7 @@
 			<img src="rk1.png" class="icon">
 				<nav>
 					<ul>
-						<li><a href="personalwebsite1.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="me.html">About Me</a></li>
 						<li><a href="academics.html">Academics</a></li>
 						<li><a href="hobbies1.html">Hobby</a></li>
